--- a/style.css
+++ b/style.css
@@ -171,7 +171,41 @@ p{
       padding-bottom: 50px;
     }
     .showcase{
+       margin-top: 30px;
+    }
+    .tiposDeTrabajosTomados{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    .tiposDeTrabajosTomados img{
+        margin-bottom: 20px;
+        width:  100%;
+        height: 135px;
+        
        
+        border-radius: 5px;
+    }
+
+    .card{
+        border: double;
+        border-color: burlywood;
+        margin-bottom: 20px;
+        display: flex;
+        flex-direction: column;
+        
+    }
+    .card img{
+        border-radius: 25px;
+        position: sticky;
+        margin: auto;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        
+    }
+    .card a{
+        position: sticky;
+        margin: auto;
     }
   }
 
